Table User {
  id Int [primary key]
  name String
  email String [unique]
  password String
  picture String
  groups Group
  created_at DateTime
  updated_at DateTime
  deleted_at DateTime
}

Table Group {
  id Int [primary key]
  name String
  picture String
  admins User
  members User
  categories Category
  tasks Task
  created_at DateTime
  updated_at DateTime
  deleted_at DateTime
  created_by User
  updated_by User
}

Table Task {
  id Int [primary key]
  title String
  description String
  status StatusTask
  dueDate DateTime
  assigned_to User
  group Group
  category Category
  created_at DateTime
  updated_at DateTime
  created_by User
  updated_by User
}

enum StatusTask {
  pending
  in_progress
  done
}

Table Category {
  id Int [primary key]
  name String
  description String
  icon String
  color String
  subcategories Category
  parent_category Int
  created_at DateTime
  updated_at DateTime
}


Ref: Group.members <> User.id
Ref: Group.categories <> Category.id
Ref: Category.id > Category.subcategories
Ref: Category.id - Category.parent_category
Ref: Task.category > Category.id
Ref: Task.group > Group.id
Ref: Task.assigned_to <> User.id